fix search bar offset on small screens

--- a/angular-cards/src/app/components/card/card.component.css
+++ b/angular-cards/src/app/components/card/card.component.css
@@ -24,7 +24,7 @@ pre {
   border-radius: 5px;
   box-shadow: 0 0 8px rgba(194, 194, 194, 0.637);
   display: block;
-  z-index: 1000;
+  z-index: 999;
   margin-left: auto;
   margin-right: auto;
 }
