--- a/angular-cards/src/app/components/search-bar/search-bar.component.css
+++ b/angular-cards/src/app/components/search-bar/search-bar.component.css
@@ -5,16 +5,20 @@
   top: 40px;
   background-color: white;
   max-height: 200px;
-  max-width: 150px;
+  max-width: 300px;
   overflow: auto;
   box-shadow: 0 0 10px rgba(194, 194, 194, 0.637);
 }
 #search {
   max-width: 150px;
-  align-items: flex-end;
+}
+@media (max-width: 600px) {
+  #search {
+    padding-right: 20px;
+  }
 }
 a {
-  max-width: 150px;
+  font-size: smaller;
 }
 button {
   padding: 0;
